--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
         <tr>
             <td>
                 <b>&lt;Nancy&gt;</b> <br>
-                <b>Email i.d.</b>: nancy.nancy6@nift.ac.in <br>
-                <b>Mobile</b>: 9992161500 <br>
+                <img src="email.png" alt="email" width="15" height="12"> <b>Email i.d.</b>: nancy.nancy6@nift.ac.in <br>
+                <img src="phone.png" alt="Mobile" width="15" height="12"> <b>Mobile</b>: 9992161500 <br>
 
-                <b>Portfolio</b>:
+                <img src="document.png" alt="Portfolio" width="15" height="12"> <b>Portfolio</b>:
 
                 <a href="https://nancy15garg.github.io/yoga/" target="_blank">Click Here</a> <br>
 
 
-                <b>Address</b>: <a href="https://goo.gl/maps/PuADRs87rdSmcuEd9" target="blank"> <img src="location.png"
+                <img src="home.jpg" alt="home" width="15" height="12"> <b>Address</b>: <a href="https://goo.gl/maps/PuADRs87rdSmcuEd9" target="blank"> <img src="location.png"
                         alt="location" height="20" title="My address"> </a> Hauz Khas <br>
                 New Delhi 110016" <br>
                 <iframe
@@ -43,6 +43,12 @@
             </td>
 
         </tr>
+        <br>
+        <tr><td><a href="www.intagram.com"> <img src="insta.jpg" alt="insta" width="20"> </a></td></tr>
+        <tr><td><a href="www.twitter.com"> <img src="twitter.png" alt="twitter" width="20"> </a></td></tr>
+        <tr><td><a href="www.facebook.com"> <img src="facebook.png" alt="insta" width="20"> </a></td></tr>
+        <tr><td><a href="www.linkedin.com"> <img src="linkedin.png" alt="insta" width="20"> </a></td></tr>
+
 
     </table>
 
@@ -51,7 +57,7 @@
         <tr>
             <td bgcolor="lightgray">
                 <font size="4">
-                    <b>Career Objective:</b>
+                    <b>Career Objective</b>
                 </font>
             </td>
         </tr>
@@ -85,10 +91,10 @@
             <td width="225"><b>Year of Passing</b></td>
             <td width="225"><b>Marks/CGPA</b></td>
         </tr>
-        
+
         <tr bgcolor="BlanchedAlmond">
             <td>B.des.</td>
-            <td>NIFT Delsi</td>
+            <td>NIFT Delhi</td>
             <td>2025</td>
             <td>9.5</td>
         </tr>
@@ -107,6 +113,89 @@
             <td>90%</td>
         </tr>
     </table>
+
+    <br>
+    <hr width="900" size="5" color="#ffa94d">
+    <table width="900" cellpadding="5" align="center">
+        <tr>
+            <td bgcolor="lightgray">
+                <b>Projects Undertaken</b>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <ol>
+                    <li>
+                        <a href="https://nift.ac.in/visionnxt" target="_blank">
+                            VisioNXT
+                        </a>
+                    </li>
+                    <li>
+                        <a
+                            href="https://in.apparelresources.com/business-news/trade/nift-indiaworking-on-delhi-polices-new-uniform/">Delhi
+                            Police Uniform
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.youtube.com/watch?v=WWloRWi6yrg">Bulletproof Jacket</a>
+                    </li>
+                </ol>
+            </td>
+        </tr>
+    </table>
+
+    <table width="900" cellpadding="5" align="center">
+        <tr bgcolor="lightgray">
+            <td colspan="6" align="center">
+                <font size="4">
+                    <b>
+                        My Work in Pictures
+                    </b>
+                </font>
+            </td>
+        </tr>
+        <tr>
+            <td width="150">
+                <a href="1.png"><img src="1.png" alt="UI/UX" title="Web Design" height="140" width="135"></a>
+            </td>
+            <td width="150">
+                <a href="2.jpg"><img src="2.jpg" alt="Illustration" title="Art" height="140" width="135"></a>
+            </td>
+            <td width="150">
+                <a href="3.jpg"><img src="3.jpg" alt="Window display" title="window display" height="140"
+                        width="135"></a>
+            </td>
+            <td width="150">
+                <a href="4.jpg"><img src="4.jpg" alt="Photography" title="Photography" height="140" width="135"></a>
+            </td>
+            <td width="150">
+                <a href="5.jpg"><img src="5.jpg" alt="Magzine Design" title="Magzine Design" height="140"
+                        width="135"></a>
+            </td>
+            <td width="150">
+                <a href="6.jpg"><img src="6.jpg" alt="Python" title="Python" height="140" width="135"></a>
+            </td>
+        </tr>
+    </table>
+
+    <table width="900" cellpadding="5" align="center">
+        <tr bgcolor="lightgray">
+            <td colspan="3" align="center">
+                <font size="4">
+                    <b>
+                        My Work in Videos
+                    </b>
+                </font>
+            </td>
+        </tr>
+
+        <tr>
+            <td width="300"><iframe width="290" src="https://www.youtube.com/embed/55NvZjUZIO8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></td>
+            <td width="300"><iframe width="290" src="https://www.youtube.com/embed/AKXkTDSvb1k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></td>
+            <td width="300"><iframe width="290" src="https://www.youtube.com/embed/dK91woAn8TI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></td>
+        </tr>
+
+        </table>
 
 </body>
 
